<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item_list_finished_activity"
    android:layout_width="340dp"
    android:layout_height="180dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="#CFCCCC"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_activity_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#E91E63"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="education" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_activity_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_activity_type"
            tools:text="Learn about a dsdfsdf sd fsdfs fsd fsdfd fsd fsd fsdfs fs f sdf sdsdfs df s dfs dfs dfs fsd f sdfs fdsf distributed version control system such as Git" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_activity_acessibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/text_view_acessibility"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_activity_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_activity_acessibility_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_participants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.004"
            app:layout_constraintStart_toEndOf="@+id/text_view_activity_acessibility"
            app:layout_constraintTop_toTopOf="@+id/text_view_activity_acessibility"
            tools:text="0,1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/text_view_participants"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_activity_acessibility" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_participants_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_participants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toEndOf="@+id/text_view_participants"
            app:layout_constraintTop_toTopOf="@+id/text_view_participants"
            app:layout_constraintVertical_bias="0.0"
            tools:text="1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_spent_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/text_spend_time"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/text_view_participants_label"
            app:layout_constraintStart_toEndOf="@id/text_view_participants_label"
            app:layout_constraintTop_toTopOf="@id/text_view_participants_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_spent_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_spent_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toEndOf="@+id/text_view_spent_time"
            app:layout_constraintTop_toTopOf="@+id/text_view_spent_time"
            app:layout_constraintVertical_bias="0.0"
            tools:text="12:30" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_participants"
            tools:text="R$ 8,50" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>